<resources>
    <string name="app_name">Appkesmas</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="what_do">What do you want to do?</string>
    <string name="positive">Positive</string>
    <string name="died">Died</string>
    <string name="last_covid">Latest Update on COVID - 19</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="clinic">Clinic</string>
    <string name="hospital">Hospital</string>
    <string name="list_receipt">List Receipt</string>
    <string name="detail_receipt">Detail Receipt</string>
    <string name="image_poster">image poster path content</string>
    <string name="image_backdrop">image backdrop path content</string>
    <string name="_0">0</string>
    <string name="heal">Heal</string>
    <string name="empty">No Data</string>
    <string name="skip">Skip</string>
    <string name="or">Or</string>

    <string name="pendaftaran">
        Pendaftaran n/
        Saat ini anda sudah berhasil melakukan pendaftaran ke RS/puskesmas yang dituju</string>
    <string name="verifikasi">Saat ini status pendaftaran anda telah diverifikasi oleh administrator RS/Puskesmas yang dituju</string>
    <string name="menunggu">Saat ini anda dapat menunggu sesuai dengan durasi waktu yang telah ditentukan</string>
    <string name="immediacy">Immediacy</string>
    <string name="painscale">Painscale</string>
    <string name="temperature">Temperature</string>
    <string name="full_name">Full Name</string>


    <string-array name="poli">
        <item>Poli Umum</item>
        <item>Poli Anak</item>
        <item>Poli Gigi</item>
        <item>Poli Penyakit Dalam</item>
    </string-array>

    <string-array name="painscale">
        <item>Painless</item>
        <item>Pain</item>
        <item>Very Pain</item>
    </string-array>

    <string-array name="immediacy">
        <item>Immediate</item>
        <item>Emergent</item>
        <item>Urgent</item>
        <item>Semi-urgent</item>
        <item>Non Urgent</item>
    </string-array>

    <string-array name="temperature">
        <item>Normal</item>
        <item>Hot</item>
    </string-array>

    <string-array name="asuransi">
        <item>Tidak Ada</item>
        <item>Askes</item>
        <item>BPJS</item>
    </string-array>
</resources>