<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.patient.RegisterPatientActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Adding rows of placeholders -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/activity_shimmer_register_patient" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/full_name"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/et_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:background="@drawable/blue_form"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Nomor Rekam Medis"
                app:layout_constraintTop_toBottomOf="@id/et_names"/>

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:background="@drawable/blue_form"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_number"/>

            <TextView
                android:id="@+id/tv_complaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/painscale"
                app:layout_constraintTop_toBottomOf="@id/et_number"/>

            <LinearLayout
                android:id="@+id/line_pain_scale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/blue_form"
                app:layout_constraintTop_toBottomOf="@id/tv_complaint">
                <Spinner
                    android:id="@+id/sp_pain_scale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/painscale"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_immediacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/immediacy"
                app:layout_constraintTop_toBottomOf="@id/line_pain_scale"/>

            <LinearLayout
                android:id="@+id/line_immediacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/blue_form"
                app:layout_constraintTop_toBottomOf="@id/tv_immediacy">
                <Spinner
                    android:id="@+id/sp_immediacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/immediacy"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/temperature"
                app:layout_constraintTop_toBottomOf="@id/line_immediacy"/>

            <LinearLayout
                android:id="@+id/line_pain_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/blue_form"
                app:layout_constraintTop_toBottomOf="@id/tv_temperature">
                <Spinner
                    android:id="@+id/sp_pain_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/temperature"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_btn"
                android:text="Daftar Antrian"
                android:textAllCaps="false"
                android:fontFamily="@font/mulish_reg"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/line_pain_temperature"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>